使用 Colaboratory 创建

--- a/20190801.ipynb
+++ b/20190801.ipynb
@@ -184,6 +184,102 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C17lWvNnKK6u",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "8a76ff9f-93a4-47d2-f63e-c586ab1bd90c"
+      },
+      "source": [
+        "#使用轉義符\\ 因為[]在正則表達式中是特殊符號,假設要匹配\\就必須要四個反斜線,\\\\\\\\,也可以使用r'\\\\',例如匹配數字可以寫成r'\\d',原本是'\\\\d'\n",
+        "import re\n",
+        "if re.search('\\\\\\\\','I have one nee\\dle'):\n",
+        "  print('match it')\n",
+        "else:\n",
+        "  print('not match')\n",
+        "if re.search(r'\\\\','I have one nee\\dle'):     #r=轉義  u=unicode\n",
+        "  print('match it')\n",
+        "else:\n",
+        "  print('not match')"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "match it\n",
+            "match it\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SZJi3tQDMgT6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "30727a52-3303-4f5a-887a-a90ad1cf6c68"
+      },
+      "source": [
+        "#抽取文本中的數字\n",
+        "#匹配1000~2999年\n",
+        "import re\n",
+        "strings = ['War of 1812','There are 5280 fect of mile','Happy New Year 2019']\n",
+        "year_string = []\n",
+        "for string in strings:\n",
+        "  if re.search('[1-2][0-9]{3}',string):\n",
+        "    year_string.append(string)\n",
+        "print(year_string)\n",
+        "\n"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['War of 1812', 'Happy New Year 2019']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bj3C9LQPUQ3x",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3de5338e-a80e-4944-870e-2dc4dcc8a219"
+      },
+      "source": [
+        "year_string = '2018 Was a good year,but 2019 will be better'\n",
+        "years = re.findall('[2][0-9]{3}',year_string)\n",
+        "print(year_string)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2018 Was a good year,but 2019 will be better\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
